--- a/index.html
+++ b/index.html
@@ -779,9 +779,11 @@
   </style>
 </head>
 <body>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e17" data-zoneid="5829214"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109235" data-width="300" data-height="100"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
+<!--JuicyAds END-->
   <div class="container">
     <header>
 
@@ -795,9 +797,12 @@
         <button class="lang-btn" data-lang="ja">日本語</button>
       </div>
     </header>
-    <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e37" data-zoneid="5829216"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+  <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109236" data-width="178" data-height="46"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
+<!--JuicyAds END-->
+
     <div class="nav-tabs">
       <button class="nav-button active" data-mode="ranking">Ranking</button>
       <button class="nav-button" data-mode="upload">Add URL</button>
@@ -806,10 +811,11 @@
       <a href="policy.html" style="padding: 12px 28px; background: white; border: 1.5px solid var(--border-light); border-radius: 8px; text-decoration: none; color: var(--text-light); font-weight: 500; transition: var(--transition);" onmouseover="this.style.borderColor='var(--secondary-color)'; this.style.transform='translateY(-2px)';" onmouseout="this.style.borderColor='var(--border-light)'; this.style.transform='translateY(0)';">Policy</a>
       <a href="contact.html" style="padding: 12px 28px; background: white; border: 1.5px solid var(--border-light); border-radius: 8px; text-decoration: none; color: var(--text-light); font-weight: 500; transition: var(--transition);" onmouseover="this.style.borderColor='var(--secondary-color)'; this.style.transform='translateY(-2px)';" onmouseout="this.style.borderColor='var(--border-light)'; this.style.transform='translateY(0)';">Contact</a>
     </div>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109236" data-width="178" data-height="46"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
+<!--JuicyAds END-->
     <!-- Ranking Mode -->
     <div id="ranking-mode" class="mode-content">
       <div class="refresh-controls">
@@ -832,9 +838,11 @@
         <button class="sort-btn" data-sort="popular">Trending Now</button>
       </div>
 
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109235" data-width="300" data-height="100"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
+<!--JuicyAds END-->
 
       <div class="status-bar">
         <div>Total <span id="total-count">0</span> URLs</div>
@@ -847,10 +855,11 @@
           <p>Loading ranking...</p>
         </div>
       </div>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109236" data-width="178" data-height="46"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
+<!--JuicyAds END-->
       <button class="load-more-btn" id="load-more-btn">Load More</button>
     </div>
     
@@ -907,10 +916,12 @@
 
 
 
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-    
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109235" data-width="300" data-height="100"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
+<!--JuicyAds END-->
+
     <!-- Settings Mode -->
     <div id="settings-mode" class="mode-content hidden">
       <div class="card">
