--- a/index.html
+++ b/index.html
@@ -899,12 +899,11 @@
         </div>
       </div>
 
-      <!-- JuicyAds Placement 5 -->
-      <div class="juicy-ad-container">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109236" data-width="728" data-height="90"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
-      </div>
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109238" data-width="774" data-height="290"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109238});</script>
+<!--JuicyAds END-->
 
       <button class="load-more-btn" id="load-more-btn">Load More</button>
     </div>
