--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="6a97888e-site-verification" content="b7b34431d332189b45b72a0be69cbe49">
+<meta name="clckd" content="86b4cf33709d61a765bacacb684d6df0" />
   <meta charset="utf-8">
   <title>TwiiterChan - Download Ranking System</title>
   <meta name="build-id" content="CHECK-00f99e5">
