remove unused html file

--- a/index.html
+++ b/index.html
@@ -593,25 +593,27 @@
       </div>
     </header>
 
-    <!-- ★★★ 広告配置2: ナビゲーション上 (高視認性) ★★★ -->
-    <div class="ad-content-between">
-      <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-      <ins id="1109236" data-width="728" data-height="90"></ins>
-      <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
-    </div>
-
+  <!-- ★★★ 広告配置1: ヘッダー直下 (最重要・高単価エリア) ★★★ -->
+  <div class="ad-premium-top">
+    <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+    <ins id="1109235" data-width="300" data-height="100"></ins>
+    <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
+  </div>
+  
     <div class="nav-tabs">
       <button class="nav-button active" data-mode="ranking">ランキング</button>
       <button class="nav-button" data-mode="upload">URL投稿</button>
       <button class="nav-button" data-mode="sites">関連サイト</button>
+      <a href="policy.html" class="nav-button" style="text-decoration: none;">利用規約</a>
+      <a href="contact.html" class="nav-button" style="text-decoration: none;">お問い合わせ</a>
     </div>
 
-    <!-- ★★★ 広告配置3: コンテンツ開始前 ★★★ -->
-    <div class="ad-content-between">
-      <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-      <ins id="1109236" data-width="728" data-height="90"></ins>
-      <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
-    </div>
+      <!-- ★★★ 広告配置5: ランキング内2 (スクロール後の高視認) ★★★ -->
+      <div class="ad-in-ranking">
+        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+        <ins id="1109238" data-width="774" data-height="290"></ins>
+        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109238});</script>
+      </div>
 
     <!-- ランキングモード -->
     <div id="ranking-mode" class="mode-content">
