remove unused html file

--- a/index.html
+++ b/index.html
@@ -573,12 +573,11 @@
 </head>
 <body>
   
-  <!-- ★★★ 広告配置1: ヘッダー直下 (最重要・高単価エリア) ★★★ -->
-  <div class="ad-premium-top">
-    <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-    <ins id="1109235" data-width="300" data-height="100"></ins>
-    <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
-  </div>
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109258" data-width="300" data-height="50"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109258});</script>
+<!--JuicyAds END-->
 
   <div class="container">
     <header>
