remove unused html file

--- a/policy.html
+++ b/policy.html
@@ -333,11 +333,6 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
 </head>
 <body>
 
-<!-- ヘッダー広告1 -->
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-<ins class="eas6a97888e17" data-zoneid="5829214"></ins> 
-<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
 <!-- ヘッダー広告2 -->
 <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
 <ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
@@ -372,13 +367,12 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
         「TwiiterChan」は、動画共有プラットフォームやファイルホスティングサービスなど、様々なソースからのファイルURLを登録・管理し、ランキング表示するWebアプリケーションです。
       </p>
 
-      <!-- 広告配置2 -->
-      <div class="ad-content">
-        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-        <ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
-        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-      </div>
-      
+  <!-- ★★★ 広告配置1: ヘッダー直下 (最重要・高単価エリア) ★★★ -->
+  <div class="ad-premium-top">
+    <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+    <ins id="1109235" data-width="300" data-height="100"></ins>
+    <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
+  </div>
       <h3>2. 利用規約への同意</h3>
       <p>
         本サービスをご利用いただくことで、本利用規約に同意したものとみなされます。本規約に同意いただけない場合は、直ちに本サービスの利用を中止してください。
@@ -416,14 +410,12 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
         本サービスは「現状のまま」提供されます。TwiiterChanは、本サービスの使用から生じるいかなる損害についても責任を負いません。
       </p>
     </div>
-
-    <!-- 広告配置4 -->
-    <div class="ad-content">
-      <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-      <ins id="1109236" data-width="178" data-height="46"></ins>
-      <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109236});</script>
-    </div>
-
+  <!-- ★★★ 広告配置1: ヘッダー直下 (最重要・高単価エリア) ★★★ -->
+  <div class="ad-premium-top">
+    <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+    <ins id="1109235" data-width="300" data-height="100"></ins>
+    <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
+  </div>
     <!-- プライバシーポリシー -->
     <div id="privacy" class="content">
       <h2>プライバシーポリシー</h2>
